# arithcode

./: CMakeLists.txt  NOTES  README.md  index.html  params.json
app/: test.c
doc/: Doxyfile.in
src/: ac.c  ac.h  said.c  said.h  stream.c  stream.h
src/1/: said.c
src/2/: said.c  said.h  said2.c
src/3/: said.c  said.h  stream.c  stream.h
test/: .stream.cc.swp  stream.cc
